#FGH-2101 #FHG-2106 page titles updated

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
@@ -3,7 +3,7 @@
 @using FamilyHubs.ServiceDirectory.Admin.Web.Areas.MyAccount.Pages;
 @model ViewPersonalDetails
 @{
-    
+    ViewData["Title"] = "Manage your account";
 }
 
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
