--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/SignOut.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/SignOut.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.SignOutModel
 @{
+    ViewData["Title"] = "You have signed out";
 }
 
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
