--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_paginatedResults.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_paginatedResults.cshtml
@@ -1,4 +1,4 @@
-﻿@model FamilyHubs.ServiceDirectory.Admin.Web.Areas.AccountAdmin.Pages.ManagePermissions.PaginatedResultsModel
+﻿@model FamilyHubs.ServiceDirectory.Admin.Web.Areas.AccountAdmin.Pages.ManagePermissions.IndexModel
 @using System.Linq
 @{
 }
@@ -8,12 +8,21 @@
     <thead class="govuk-table__head">
         <tr class="govuk-table__row">
 
-            <th scope="col" class="govuk-table__header" aria-sort="none" style="width: 20%"><button type="button" data-index="0">Name</button></th>
 
-            <th scope="col" class="govuk-table__header" aria-sort="none" style="width: 40%"><button type="button" data-index="1">Email address</button></th>
+            <th scope="col" class="govuk-table__header" aria-sort="@Model.NameSortOrder.ToString().ToLower()" style="width: 20%">
+                <input type="hidden" asp-for="NameSortOrder" value="@((int)Model.NameSortOrder)">
+                <button type="submit" data-index="0" name="SortBy" value="Name">Name</button>
+            </th>
 
-            <th scope="col" class="govuk-table__header" aria-sort="descending" style="width: 20%"><button type="button" data-index="2">Works for</button></th>
+            <th scope="col" class="govuk-table__header" aria-sort="@Model.EmailSortOrder.ToString().ToLower()" style="width: 40%">
+                <input type="hidden" asp-for="EmailSortOrder" value="@((int)Model.EmailSortOrder)">
+                <button type="submit" data-index="1" name="SortBy" value="Email">Email address</button>
+            </th>
 
+            <th scope="col" class="govuk-table__header" aria-sort="@Model.OrganisationSortOrder.ToString().ToLower()" style="width: 20%">
+                <input type="hidden" asp-for="OrganisationSortOrder" value="@((int)Model.OrganisationSortOrder)">
+                <button type="submit" data-index="2" name="SortBy" value="Organisation">Works for</button>
+            </th>
 
             <th scope="col" class="govuk-table__header govuk-table__header--numeric" style="width: 20%" aria-sort="none"></th>
 
@@ -30,12 +39,11 @@
 
                 <td class="govuk-table__cell" style="overflow-wrap: anywhere">@account.Email</td>
 
-                <td class="govuk-table__cell">@account.Claims.FirstOrDefault(x=> x.Name == "OrganisationName").Value</td>
-
+                <td class="govuk-table__cell">@IndexModel.OrganisationName(account)</td>
 
                 <td class="govuk-table__cell govuk-table__cell--numeric">
-                    <a class="govuk-!-margin-right-1" href="#">Edit</a>
-                    <a class="govuk-!-margin-right-0" href="#">Delete</a>
+                    <a class="govuk-!-margin-right-1" asp-page="/PlaceHolder">Edit</a>
+                    <a class="govuk-!-margin-right-0" asp-page="/PlaceHolder">Delete</a>
                 </td>
 
             </tr>
