Page requires authorisation

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_filter.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_filter.cshtml
@@ -87,7 +87,7 @@
         Apply filters
     </button>
 
-    <p><a href="">Clear filters</a></p>
+    <p><a asp-page="ManagePermissions">Clear filters</a></p>
 </div>
 
 
