--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_paginatedResults.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_paginatedResults.cshtml
@@ -8,21 +8,11 @@
     <thead class="govuk-table__head">
         <tr class="govuk-table__row">
 
+            <component type="typeof(Components.SortHeaderComponent)" param-Title='"Name"' param-Name='"Name"' param-SortBy='@Model.SortBy' param-Style='"width: 20%"' param-DataIndex='0' render-mode="Static" />
 
-            <th scope="col" class="govuk-table__header" aria-sort="@Model.NameSortOrder.ToString().ToLower()" style="width: 20%">
-                <input type="hidden" asp-for="NameSortOrder" value="@((int)Model.NameSortOrder)">
-                <button type="submit" data-index="0" name="SortBy" value="Name">Name</button>
-            </th>
+            <component type="typeof(Components.SortHeaderComponent)" param-Title='"Email address"' param-Name='"Email"' param-SortBy='@Model.SortBy' param-Style='"width: 40%"' param-DataIndex='1' render-mode="Static" />
 
-            <th scope="col" class="govuk-table__header" aria-sort="@Model.EmailSortOrder.ToString().ToLower()" style="width: 40%">
-                <input type="hidden" asp-for="EmailSortOrder" value="@((int)Model.EmailSortOrder)">
-                <button type="submit" data-index="1" name="SortBy" value="Email">Email address</button>
-            </th>
-
-            <th scope="col" class="govuk-table__header" aria-sort="@Model.OrganisationSortOrder.ToString().ToLower()" style="width: 20%">
-                <input type="hidden" asp-for="OrganisationSortOrder" value="@((int)Model.OrganisationSortOrder)">
-                <button type="submit" data-index="2" name="SortBy" value="Organisation">Works for</button>
-            </th>
+            <component type="typeof(Components.SortHeaderComponent)" param-Title='"Works for"' param-Name='"Organisation"' param-SortBy='@Model.SortBy' param-Style='"width: 20%"' param-DataIndex='2' render-mode="Static" />
 
             <th scope="col" class="govuk-table__header govuk-table__header--numeric" style="width: 20%" aria-sort="none"></th>
 
@@ -51,31 +41,5 @@
 
     </tbody>
 </table>
-<nav class="govuk-pagination" role="navigation" aria-label="results">
-    <ul class="govuk-pagination__list">
-        <li class="govuk-pagination__item govuk-pagination__item--current">
-            <a class="govuk-link govuk-pagination__link" href="#" aria-label="Page 1" aria-current="page">
-                1
-            </a>
-        </li>
-        <li class="govuk-pagination__item">
-            <a class="govuk-link govuk-pagination__link" href="#" aria-label="Page 2">
-                2
-            </a>
-        </li>
-        <li class="govuk-pagination__item">
-            <a class="govuk-link govuk-pagination__link" href="#" aria-label="Page 3">
-                3
-            </a>
-        </li>
-    </ul>
-    <div class="govuk-pagination__next">
-        <a class="govuk-link govuk-pagination__link" href="#" rel="next">
-            <span class="govuk-pagination__link-title">Next</span>
-            <svg class="govuk-pagination__icon govuk-pagination__icon--next" xmlns="http://www.w3.org/2000/svg" height="13" width="15" aria-hidden="true" focusable="false" viewBox="0 0 15 13">
-                <path d="m8.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
-            </svg>
-        </a>
-    </div>
-</nav>
-<div aria-live="polite" role="status" aria-atomic="true" class="govuk-visually-hidden">Sort by Works for (descending)</div>
+
+<partial name="_LargeSetPaginationForm" model='Model.Pagination' />
