Edit Account Page

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_checkDetailRow.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_checkDetailRow.cshtml
@@ -8,8 +8,11 @@
         @Model.Value
     </dd>
     <dd class="govuk-summary-list__actions">
-        <a class="govuk-link" href="@Model.ChangeLocation">
-            Change<span class="govuk-visually-hidden"> name</span>
-        </a>
+        @if (!string.IsNullOrEmpty(Model.ChangeLocation))
+        {
+            <a class="govuk-link" href="@Model.ChangeLocation">
+                @Model.ChangeAnchorText<span class="govuk-visually-hidden"> name</span>
+            </a>
+        }
     </dd>
 </div>
