--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/Edit.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/Edit.cshtml
@@ -2,7 +2,7 @@
 @using FamilyHubs.ServiceDirectory.Admin.Core.Models;
 @model FamilyHubs.ServiceDirectory.Admin.Web.Areas.AccountAdmin.Pages.ManagePermissions.EditModel
 @{
-    ViewData["Title"] = "Edit Permissions";
+    ViewData["Title"] = Model.Name;
     Layout = "~/pages/Shared/_Layout.cshtml";
 }
 
