--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_filter.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_filter.cshtml
@@ -3,8 +3,8 @@
 
 }
 
-<button class="govuk-button govuk-button--secondary filters-mobile" id="buttonFilters" onclick="displayFilters();">Show filters</button>
-<button class="govuk-button govuk-button--secondary filters-mobile" style="display: none;" id="buttonFilters2" onclick="hideFilters();">Hide filters</button>
+<button type="button" class="govuk-button govuk-button--secondary filters-mobile" id="buttonFilters" onclick="displayFilters();">Show filters</button>
+<button type="button" class="govuk-button govuk-button--secondary filters-mobile" style="display: none;" id="buttonFilters2" onclick="hideFilters();">Hide filters</button>
 
 
 <div class="filters-component panel-component__content" id="filters-component" data-controller="filters">
