--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/_Layout.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/_Layout.cshtml
@@ -1,10 +1,49 @@
 ﻿@model FamilyHubs.ServiceDirectory.Admin.Web.ViewModel.MyAccountViewModel
 @{
-    //var errorGroupCss = Model.HasValidationError ? "govuk-form-group--error" : "";
+    var errorGroupCss = Model.HasValidationError ? "govuk-form-group--error" : "";
     Layout = "~/pages/Shared/_Layout.cshtml";
 }
+@if (Model.HasBackButton)
+{
+    <a asp-page="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
+}
 
-<a asp-page="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
-
-@RenderBody()
-                       
+<main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            <form method="post">
+                <div class="govuk-form-group">
+                    @if (Model.HasValidationError)
+                    {
+                        <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" data-module="govuk-error-summary">
+                            <h2 class="govuk-error-summary__title" id="error-summary-title">
+                                There is a problem
+                            </h2>
+                            <div class="govuk-error-summary__body">
+                                <ul class="govuk-list govuk-error-summary__list" data-testid="errors-list">
+                                    <li>
+                                        <a href="#@Model.ErrorElementId">@Model.ErrorMessage</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    }
+                    <fieldset class="govuk-fieldset">
+                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                            <h1 class="govuk-fieldset__heading">
+                                @Model.PageHeading
+                            </h1>
+                        </legend>
+                        <div class="govuk-form-group @errorGroupCss">
+                            @if (Model.HasValidationError)
+                            {
+                                <span class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> @Model.ErrorMessage</span>
+                            }
+                            @RenderBody()
+                        </div>
+                    </fieldset>
+                </div>
+            </form>
+        </div>
+    </div>
+</main>
