--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/Edit.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/AccountAdmin/ManagePermissions/{AccountId}"
 @using FamilyHubs.ServiceDirectory.Admin.Core.Models;
 @model FamilyHubs.ServiceDirectory.Admin.Web.Areas.AccountAdmin.Pages.ManagePermissions.EditModel
 @{
@@ -20,9 +20,9 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-                @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Name", Model.Name, "/placeholder", "Edit", "Name"))
+                @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Name", Model.Name, "Name"))
 
-                @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Email", Model.Email, "/placeholder", "Edit", "Email"))
+                @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Email", Model.Email, $"/AccountAdmin/ManagePermissions/{Model.Id}/Email", "Edit", "Email"))
 
                 @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Works for", Model.Organisation, "Organisation"))
 
