FHG-3708 Edit Email

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/EditEmail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/EditEmail.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/pages/Shared/_InputPageLayout.cshtml";
 }
 
-
+<input type="hidden" id="accountId" name="AccountId" asp-for="AccountId" />
 <div class="govuk-form-group">
     <label class="govuk-label govuk-visually-hidden" for="email">Email address</label>
-    <input class="govuk-input govuk-!-width-two-thirds" id="email" name="email" type="email" spellcheck="false" aria-describedby="email-hint" autocomplete="email">
+    <input class="govuk-input govuk-!-width-two-thirds" id="email" asp-for="@Model.EmailAddress" spellcheck="false" aria-describedby="email-hint" autocomplete="email">
 </div>
 
