Delete user page added

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_paginatedResults.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/_paginatedResults.cshtml
@@ -34,7 +34,7 @@
 
                 <td class="govuk-table__cell govuk-table__cell--numeric">
                     <a class="govuk-!-margin-right-1" href="ManagePermissions/@account.Id">Edit</a>
-                    <a class="govuk-!-margin-right-0" asp-page="/PlaceHolder">Delete</a>
+                    <a class="govuk-!-margin-right-0" href="ManagePermissions/@account.Id/Delete">Delete</a>
                 </td>
 
             </tr>
