delete user and claims from db

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/DeleteUser.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/DeleteUser.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/AccountAdmin/ManagePermissions/{AccountId:long}/Delete"
-@model FamilyHubs.ServiceDirectory.Admin.Web.Areas.AccountAdmin.Pages.ManagePermissions.DeleteUserPermissionsModel
+@model FamilyHubs.ServiceDirectory.Admin.Web.Areas.AccountAdmin.Pages.ManagePermissions.DeleteUserModel
 @{
     Layout = "~/pages/Shared/_InputPageLayout.cshtml";
 
