--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/index.cshtml
@@ -2,35 +2,30 @@
 @model IndexModel
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @{
-    ViewData["Title"] = "Add a service to the local support directory";
+    ViewData["Title"] = "Manage family support services and accounts";
 }
+
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
-            <h1 class="govuk-heading-xl">Add a service to the local support directory</h1>
+            <h1 class="govuk-heading-l">Manage family support services and accounts</h1>
 
-            <p>This is for organisations supporting children and families in England.</p>
-            <p>Use this to sign in to the directory and add details about services your organisation offers.</p>
+            <p>This is to manage family support services.</p>
+            <p>Use this to:</p>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>add local authorities</li>
+                <li>add VCS organisations to the directory</li>
+                <li>view organisations you have added to the directory </li>
+            </ul>
 
-            <div class="govuk-inset-text">
-                To use this, your local authority must have approved your application to join.
-            </div>
-            <a asp-page="/Welcome" class="govuk-button govuk-button--start" data-module="govuk-button" id="linkStart">
+            <a asp-page="/Welcome" class="govuk-button govuk-button--start">
                 Start now
                 <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
-                    <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+                    <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
                 </svg>
             </a>
-
-            <h2 class="govuk-heading-m">Joining the local support directory</h2>
-            <p>You can join by contacting your local authority.</p>
-            <p>The directory helps people working with families to:</p>
-
-            <ul class="govuk-list govuk-list--bullet">
-                <li>find out about your services</li>
-                <li>connect you with families who need support - sometimes called a 'referral'</li>
-            </ul>
         </div>
+
     </div>
 </main>
