--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using FamilyHubs.SharedKernel.Identity;
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @model WelcomeModel
 @{
@@ -14,109 +15,114 @@
 
             <h1 class="govuk-caption-l">@organisationName</h1>
 
-            <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+            @if (Model.ShowAccountsSection)
+            {
+                <component type="typeof(Components.SectionBreakHeaderComponent)" param-Header='"Accounts"' render-mode="Static" />
 
-            <h2 class="govuk-heading-m govuk-!-margin-bottom-6">Accounts</h2>
-
-            <div class="cards">
-                <div class="card">
-                    <h3 class="govuk-heading-s">
-                        <a asp-page-handler="AddPermissionFlow" id="add-permission">Add permissions</a>
-                    </h3>
-                    <p class="govuk-body-s">Add account permissions to manage family support services and manage connection requests.</p>
-                </div>
-                <div class="card">
-                    <h3 class="govuk-heading-s">
-                        <a href="AccountAdmin/ManagePermissions">Manage permissions</a>
-                    </h3>
-                    <p class="govuk-body-s">View and remove account permissions to manage family support services or manage connection requests.</p>
-                </div>
-            </div>
-
-            <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
-
-            <h2 class="govuk-heading-m govuk-!-margin-bottom-6">Local authorities (LAs)</h2>
-
-            <div class="cards">
-                <div class="card">
-                    <h3 class="govuk-heading-s">
-                        <a asp-page="/PlaceHolder">Add an LA service</a>
-                    </h3>
-                    <p class="govuk-body-s">Add a service to the directory.</p>
-                </div>
-                <div class="card">
-                    <h3 class="govuk-heading-s">
-                        <a asp-page="/PlaceHolder">Manage LA services</a>
-                    </h3>
-                    <p class="govuk-body-s">View, change or delete services shown in the directory.</p>
-                </div>
-                <div class="card">
-                    <h3 class="govuk-heading-s">
-                        <a asp-page="/PlaceHolder">Add a family hub</a>
-                    </h3>
-                    <p class="govuk-body-s">Add a family hub to the directory.</p>
-                </div>
-                <div class="card">
-                    <h3 class="govuk-heading-s">
-                        <a asp-page="/PlaceHolder">Manage family hubs</a>
-                    </h3>
-                    <p class="govuk-body-s">View, change or delete family hubs shown in the directory.</p>
-                </div>
-                <div class="card">
-                    <h3 class="govuk-heading-s">
-                        <a asp-page="/PlaceHolder">Activate a local authority</a>
-                    </h3>
-                    <p class="govuk-body-s">Activate an LA before you create its accounts, services and family hubs.</p>
-                </div>
-            </div>
-
-            <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
-
-            <h2 class="govuk-heading-m govuk-!-margin-bottom-6">Voluntary community organisations (VCSs)</h2>
-
-            <div class="cards">
-                <div class="card">
-                    <h3 class="govuk-heading-s">
-                        <a asp-page="/PlaceHolder">Add a VCS service</a>
-                    </h3>
-                    <p class="govuk-body-s">Add a service to the directory.</p>
-                </div>
-                <div class="card">
-                    <h3 class="govuk-heading-s">
-                        <a asp-page="/PlaceHolder">Manage VCS services</a>
-                    </h3>
-                    <p class="govuk-body-s">View, change or delete services shown in the directory.</p>
-                </div>
-                <div class="card">
-                    <h3 class="govuk-heading-s">
-                        <a asp-page-handler="AddOrganisation">Add a VCS organisation</a>
-                    </h3>
-                    <p class="govuk-body-s"> Add an organisation before creating their user accounts.</p>
-                </div>
-                <div class="card">
-                    <h3 class="govuk-heading-s">
-                        <a asp-page="/PlaceHolder">Manage VCS organisations</a>
-                    </h3>
-                    <p class="govuk-body-s">View, change or delete existing organisations.</p>
-                </div>
-            </div>
-
-            <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
-
-            <div class="cards">
-                @if (Model.IsUploadSpreadsheetEnabled)
-                {
+                <div class="cards">
                     <div class="card">
-                        <h2 class="govuk-heading-s">
-                            <a asp-page-handler="UploadSpreadsheetData" asp-route-organisationid="@Model.OrganisationViewModel.Id" data-module="govuk-button" data-testid="upload-spreadsheet">
-                                Upload Excel Spreadsheet
-                            </a>
-                        </h2>
-                        <p class="govuk-body-s">Upload an excel spreadsheet.</p>
+                        <h3 class="govuk-heading-s">
+                            <a asp-page-handler="AddPermissionFlow" id="add-permission">Add permissions</a>
+                        </h3>
+                        <p class="govuk-body-s">Add account permissions to manage family support services and manage connection requests.</p>
                     </div>
-                }
-            </div>
-            
+                    <div class="card">
+                        <h3 class="govuk-heading-s">
+                            <a href="AccountAdmin/ManagePermissions">Manage permissions</a>
+                        </h3>
+                        <p class="govuk-body-s">View and remove account permissions to manage family support services or manage connection requests.</p>
+                    </div>
+                </div>
+            }
+
+            @if (Model.ShowLaSection)
+            {
+                <component type="typeof(Components.SectionBreakHeaderComponent)" param-Header='"Local authorities (LAs)"' render-mode="Static" />
+
+                <div class="cards">
+                    <div class="card">
+                        <h3 class="govuk-heading-s">
+                            <a asp-page="/PlaceHolder">Add an LA service</a>
+                        </h3>
+                        <p class="govuk-body-s">Add a service to the directory.</p>
+                    </div>
+                    <div class="card">
+                        <h3 class="govuk-heading-s">
+                            <a asp-page="/PlaceHolder">Manage LA services</a>
+                        </h3>
+                        <p class="govuk-body-s">View, change or delete services shown in the directory.</p>
+                    </div>
+                    <div class="card">
+                        <h3 class="govuk-heading-s">
+                            <a asp-page="/PlaceHolder">Add a family hub</a>
+                        </h3>
+                        <p class="govuk-body-s">Add a family hub to the directory.</p>
+                    </div>
+                    <div class="card">
+                        <h3 class="govuk-heading-s">
+                            <a asp-page="/PlaceHolder">Manage family hubs</a>
+                        </h3>
+                        <p class="govuk-body-s">View, change or delete family hubs shown in the directory.</p>
+                    </div>
+                    <div class="card">
+                        <h3 class="govuk-heading-s">
+                            <a asp-page="/PlaceHolder">Activate a local authority</a>
+                        </h3>
+                        <p class="govuk-body-s">Activate an LA before you create its accounts, services and family hubs.</p>
+                    </div>
+                </div>
+            }
+
+            @if (Model.ShowVcsSection)
+            {
+                <component type="typeof(Components.SectionBreakHeaderComponent)" param-Header='"Voluntary community organisations (VCSs)"' render-mode="Static" />
+
+                <div class="cards">
+                    <div class="card">
+                        <h3 class="govuk-heading-s">
+                            <a asp-page="/PlaceHolder">Add a VCS service</a>
+                        </h3>
+                        <p class="govuk-body-s">Add a service to the directory.</p>
+                    </div>
+                    <div class="card">
+                        <h3 class="govuk-heading-s">
+                            <a asp-page="/PlaceHolder">Manage VCS services</a>
+                        </h3>
+                        <p class="govuk-body-s">View, change or delete services shown in the directory.</p>
+                    </div>
+                    <div class="card">
+                        <h3 class="govuk-heading-s">
+                            <a asp-page-handler="AddOrganisation">Add a VCS organisation</a>
+                        </h3>
+                        <p class="govuk-body-s"> Add an organisation before creating their user accounts.</p>
+                    </div>
+                    <div class="card">
+                        <h3 class="govuk-heading-s">
+                            <a asp-page="/PlaceHolder">Manage VCS organisations</a>
+                        </h3>
+                        <p class="govuk-body-s">View, change or delete existing organisations.</p>
+                    </div>
+                </div>
+            }
+
+            @if (Model.ShowSpreadsheetUploadSection)
+            {
+                <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+
+                <div class="cards">
+                    @if (Model.IsUploadSpreadsheetEnabled)
+                    {
+                        <div class="card">
+                            <h2 class="govuk-heading-s">
+                                <a asp-page-handler="UploadSpreadsheetData" asp-route-organisationid="@Model.OrganisationViewModel.Id" data-module="govuk-button" data-testid="upload-spreadsheet">
+                                    Upload Excel Spreadsheet
+                                </a>
+                            </h2>
+                            <p class="govuk-body-s">Upload an excel spreadsheet.</p>
+                        </div>
+                    }
+                </div>
+            }
         </div>
     </div>
 </main>
