--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationResult.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationResult.cshtml
@@ -16,7 +16,7 @@
             <h2 class="govuk-heading-m govuk-!-margin-top-6">What happens next</h2>
 
             <p class="govuk-body">
-                You can now create user accounts for the organisation.
+                You can now create user accounts for the organisation. You can also add its services to the directory.
             </p>
             <p class="govuk-body">You can do this from your homepage.</p>
             <form method="post">
@@ -25,4 +25,5 @@
 
         </div>
     </div>
-</main> 
+</main>
+
