--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/AddPermissionCheckAnswer.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/AddPermissionCheckAnswer.cshtml
@@ -22,23 +22,24 @@
 
                 <dl class="govuk-summary-list govuk-!-margin-bottom-9" id="replace-commas">
 
-                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Who for", Model.WhoFor, "/AccountAdmin/TypeOfRole", "WhoFor"))
+                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Who for", Model.WhoFor, $"/AccountAdmin/TypeOfRole/{@Model.CacheId}", "WhoFor"))
 
-                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Type of permission", Model.TypeOfPermission, Model.LaJourney ? "/AccountAdmin/TypeOfUserLa" : "/AccountAdmin/TypeOfUserVcs",  "TypeOfPermission"))
+                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Type of permission", Model.TypeOfPermission, Model.LaJourney ?
+                        $"/AccountAdmin/TypeOfUserLa/{@Model.CacheId}" : $"/AccountAdmin/TypeOfUserVcs/{@Model.CacheId}",  "TypeOfPermission"))
 
                     @if (!Model.IsUserLaManager)
                     {
-                        @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Local authority", Model.LaOrganisationName, "/AccountAdmin/WhichLocalAuthority", "LocalAuthority"))
+                        @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Local authority", Model.LaOrganisationName, $"/AccountAdmin/WhichLocalAuthority/{@Model.CacheId}", "LocalAuthority"))
                     }
 
                     @if (!string.IsNullOrWhiteSpace(Model.VcsOrganisationName))
                     {
-                        @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Voluntary and community organisation", Model.VcsOrganisationName, "/AccountAdmin/WhichVcsOrganisation", "VcsOrganisation"))
+                        @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Voluntary and community organisation", Model.VcsOrganisationName, $"/AccountAdmin/WhichVcsOrganisation/{@Model.CacheId}", "VcsOrganisation"))
                     }
 
-                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Email address", Model.Email, "/AccountAdmin/UserEmail", "EmailAddress"))
+                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Email address", Model.Email, $"/AccountAdmin/UserEmail/{@Model.CacheId}", "EmailAddress"))
 
-                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Name", Model.Name, "/AccountAdmin/UserName", "FullName"))
+                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Name", Model.Name, $"/AccountAdmin/UserName/{@Model.CacheId}", "FullName"))
 
                 </dl>
                 
