title and page heading fixed

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisation.cshtml
@@ -2,6 +2,7 @@
 @model FamilyHubs.ServiceDirectory.Admin.Web.Areas.VcsAdmin.Pages.AddOrganisationModel
 @{
     Layout = "~/pages/Shared/_InputPageLayout.cshtml";
+    ViewData["Title"] = Model.PageHeading;
 }
 
 
