--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/Edit.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/Edit.cshtml
@@ -13,7 +13,7 @@
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l">@Model.Name</h1>
+            <h1 class="govuk-heading-l" style="overflow-wrap: anywhere">@Model.Name</h1>
         </div>
     </div>
 
