FHG-3779-bug fix

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/EmailAlreadyInUse.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/EmailAlreadyInUse.cshtml
@@ -5,6 +5,8 @@
     ViewData["Title"] = "This email address is already linked to another account";
 }
 
+<a href="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
+
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
 
 
