modify accessible autocomplete config

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationWhichLocalAuthority.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationWhichLocalAuthority.cshtml
@@ -22,7 +22,7 @@
 
         accessibleAutocomplete.enhanceSelectElement({
             defaultValue: decodeHtml('@Model.LaOrganisationName'),
-            name: 'localAuthority',
+            name: 'LaOrganisationName',
             selectElement: selectElement
         })
     </script>
