FHG-3815 bug fix

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationAlreadyExists.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/AddOrganisationAlreadyExists.cshtml
@@ -5,6 +5,8 @@
     ViewData["Title"] = "This name has already been used by another VCS organisation";
 }
 
+<a href="@Model.PreviousPageLink" class="govuk-back-link">Back</a>
+
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
 
 
