FHG-3798 Manage Organisations

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -98,7 +98,7 @@
                     </div>
                     <div class="card">
                         <h3 class="govuk-heading-s">
-                            <a asp-page="/PlaceHolder">Manage VCS organisations</a>
+                            <a asp-page="ManageOrganisations" asp-area="VcsAdmin">Manage VCS organisations</a>
                         </h3>
                         <p class="govuk-body-s">View, change or delete existing organisations.</p>
                     </div>
