--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -80,7 +80,7 @@
                 <div class="cards">
                     <div class="card">
                         <h3 class="govuk-heading-s">
-                            <a asp-page="/PlaceHolder">Add a VCS service</a>
+                            <a asp-page="ServiceName" asp-area="ServiceWizzard">Add a VCS service</a>
                         </h3>
                         <p class="govuk-body-s">Add a service to the directory.</p>
                     </div>
