--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ViewOrganisation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/ViewOrganisation.cshtml
@@ -16,22 +16,22 @@
       </div>
     </div>
     <form method="post">
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Name", Model.OrganisationName, $"/VcsAdmin/UpdateOrganisation/{Model.OrganisationId}", "OrganisationName"))
-                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Local authority", Model.LocalAuthority, "LocalAuthority"))
-                    @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Type", Model.OrganisationType, "OrganisationType"))
-            </dl>
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds">
+                <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+                        @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Name", Model.OrganisationName, $"/VcsAdmin/UpdateOrganisation/{Model.OrganisationId}", "OrganisationName"))
+                        @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Local authority", Model.LocalAuthority, "LocalAuthority"))
+                        @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Type", Model.OrganisationType, "OrganisationType"))
+                </dl>
             
-            @if (Model.CanSave)
-            {
-                <button class="govuk-button" href="edit-saved">Save</button> 
-            }
+                @if (Model.CanSave)
+                {
+                    <button class="govuk-button">Save</button> 
+                }
 
-            <p><a href="@Model.BackPath">Back to manage local authorities and organisations</a></p>
+                <p><a href="@Model.BackPath">Back to manage local authorities and organisations</a></p>
+            </div>
         </div>
-    </div>
     </form>
 
 </main>
