--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/UpdateOrganisationResult.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/UpdateOrganisationResult.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model FamilyHubs.ServiceDirectory.Admin.Web.Areas.VcsAdmin.Pages.UpdateOrganisationResultModel
 @{
+    ViewData["Title"] = "You have saved these details";
 }
 
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
