Reinstated first few service wizzard pages Remove some warings

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/TypeOfSupport.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/TypeOfSupport.cshtml
@@ -30,10 +30,8 @@
                 </div>
             }
             <fieldset class="govuk-fieldset">
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                    <h1 class="govuk-fieldset__heading">
-                        What support does the service offer?
-                    </h1>
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l legend_h1">
+                    What support does the service offer?
                 </legend>
                 <form method="post">
                     <div class="govuk-form-group @(!ModelState.IsValid ? "govuk-form-group--error" : "")">
