--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ViewPersonalDetails.cshtml
@@ -7,10 +7,8 @@
 
 
 <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-        <h1 class="govuk-fieldset__heading">
-            Manage your account
-        </h1>
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l legend_h1">
+        Manage your account
     </legend>
     <table class="govuk-table govuk-!-margin-top-2">
         <tbody class="govuk-table__body">
