--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/DaysTakePlace.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/ServiceWizzard/Pages/DaysTakePlace.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model FamilyHubs.ServiceDirectory.Admin.Web.Areas.ServiceWizzard.Pages.DaysTakePlaceModel
 @{
-    ViewData["Title"] = "Does this service take place on set days and times?";
+    ViewData["Title"] = "When does this service take place?";
 }
 
 @section Head {
@@ -11,13 +11,12 @@
 <a asp-page="ServiceTimes" asp-area="ServiceWizzard" class="govuk-back-link">Back</a>
 
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
+    <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
         <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                <h1 class="govuk-fieldset__heading">
-                    When does this service take place?
-                </h1>
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l legend_h1">
+                When does this service take place?
             </legend>
             <br>
             <p>We need to know which days the service usually takes place on.</p>
@@ -68,5 +67,6 @@
                 </button>
             </form>
         </fieldset>
+    </div>
     </div>
 </main>
